refactor update and tag endpoints
